--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        
+        <from action="submit" method="post">
+            <label for="password">Enter Password: </label>
+            <input type="password" id="password" name="password" required/>
+            <input type="submit" value="submit"/>
+        </from>
     </body>
 </html>
